--- a/chartlink table extractor/manifest.json
+++ b/chartlink table extractor/manifest.json
@@ -1,6 +1,25 @@
 {
-    "name": "Chartlink Table Extractor",
-    "description": "Extract stock symbols in the tables as CSV output",
+    "name": "Chartlink Dashboard to CSV",
+    "description": "Extract stock symbols as CSV output and load it into TradingView",
     "version": "1.0",
-    "manifest_version": 3
+    "manifest_version": 3,
+    "background": {
+        "service_worker": "background.js"
+    },
+    "permissions": ["storage", "activeTab", "scripting"],
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "/images/icon-16_x_16.png",
+            "32": "/images/icon-32_x_32.png",
+            "48": "/images/icon-48_x_48.png",
+            "128": "/images/icon-128_x_128.png"
+        }
+    },
+    "icons": {
+        "16": "/images/icon-16_x_16.png",
+        "32": "/images/icon-32_x_32.png",
+        "48": "/images/icon-48_x_48.png",
+        "128": "/images/icon-128_x_128.png"
+    }
   }
